Add get schedule api & Global Exceptionhandler

--- a/calendar-api/src/main/resources/templates/index.html
+++ b/calendar-api/src/main/resources/templates/index.html
@@ -129,7 +129,7 @@
             console.log(res)
             location.reload();
         }).catch((e) => {
-            alert(JSON.stringify(e.response))
+            alert(e.response.data.errorMessage)
         })
     })
 
@@ -143,7 +143,7 @@
             location.reload();
         }).catch((e) => {
             console.log(e)
-            alert(JSON.stringify(e.response))
+            alert(e.response.data.errorMessage)
         })
     })
 
